--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -20,9 +21,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
+    "px2rem-loader": "^0.1.9",
     "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
